feat: 服务器重启策略 KnotLink: 支持外部调用